--- a/index.html
+++ b/index.html
@@ -65,100 +65,6 @@
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
 
-     <!-- ACADEMIES MODAL -->
-    <div class="modal fade" id="academiesModal">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-
-                    <form method="POST" action="https://akoskarova.activehosted.com/proc.php" id="_form_1017_" class="_form _form_1017 _inline-form  _dark" novalidate data-styles-version="5">
-                        <input type="hidden" name="u" value="1017" />
-                        <input type="hidden" name="f" value="1017" />
-                        <input type="hidden" name="s" />
-                        <input type="hidden" name="c" value="0" />
-                        <input type="hidden" name="m" value="0" />
-                        <input type="hidden" name="act" value="sub" />
-                        <input type="hidden" name="v" value="2" />
-                        <input type="hidden" name="or" value="944d871c-2590-4bc9-860b-cabeada010a2" />
-                        <div class="_form-content">
-                            <div class="_form_element _x06446460 _full_width _clear" >
-                            <h2 class="_form-title">
-                                Половина цена, за целосно нова кариера во 2026!
-                            </h2>
-                            </div>
-                            <div class="_form_element _x50857582 _full_width _clear" >
-                            <div class="_html-code">
-                                <p>
-                                Започни кариера во човечки ресурси со -50% попуст во 2026 година.
-                                </p>
-                                <p>
-                                💥 50 слободни места и само до 30 ноември!
-                                </p>
-                            </div>
-                            </div>
-                            <div class="_form_element _x47431121 _full_width " >
-                            <label for="fullname" class="_form-label">
-                                Име и презиме<span class="field-required">
-                                *
-                            </span>
-                            </label>
-                            <div class="_field-wrapper">
-                            <input type="text" id="fullname" name="fullname" placeholder="пр. Иван Ивановски" required/>
-                            </div>
-                        </div>
-                        <div class="_form_element _x46310163 _full_width " >
-                            <label for="email" class="_form-label">
-                            Е-пошта<span class="field-required">
-                            *
-                            </span>
-                        </label>
-                        <div class="_field-wrapper">
-                            <input type="text" id="email" name="email" placeholder="пр. ivan@gmail.com" required/>
-                        </div>
-                        </div>
-                        <div class="_form_element _x97418590 _full_width " >
-                        <label for="phone" class="_form-label">
-                            Телефонски број<span class="field-required">
-                            *
-                        </span>
-                        </label>
-                        <div class="_field-wrapper">
-                        <input type="text" id="phone" name="phone" placeholder="пр. 071 234 567" required/>
-                        </div>
-                        </div>
-                        <div class="_form_element _x10611095 _full_width " >
-                        <label for="g-recaptcha-response" class="_form-label">
-                        Верифицирај дека не си робот<span class="field-required">
-                        *
-                        </span>
-                        </label>
-                        <div class="g-recaptcha" data-sitekey="6LcwIw8TAAAAACP1ysM08EhCgzd6q5JAOUR1a0Go">
-                        </div>
-                        </div>
-                        <div class="_form_element _x12959948 _full_width _clear" >
-                        <div class="_html-code">
-                        <p>
-                        *Оваа понуда е за пролетни уписи!
-                        </p>
-                        </div>
-                        </div>
-                        <div class="_button-wrapper _full_width">
-                        <button id="_form_1017_submit" class="_submit" type="submit">
-                        Аплицирај
-                        </button>
-                        </div>
-                        <div class="_clear-element">
-                        </div>
-                        </div>
-                        <div class="_form-thank-you" style="display:none;">
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <header>
         <!-- <div class="spots">
             <div class="container">
@@ -294,7 +200,7 @@
                                 <h3>Основна SHRM Акредитирана програма</h3>
                             </div>
 
-                            <div class="d-flex flex-column flex-md-row gap-2 align-items-center">
+                            <div class="d-flex gap-2 justify-content-center justify-content-md-start align-items-center">
                                 <p class="not-crossed">€1,375</p>
                                 <p class="crossed">€2,750</p>
                             </div>
@@ -312,7 +218,7 @@
                                 </ul>
                             </div>
 
-                            <a data-bs-toggle="modal" data-bs-target="#academiesModal">Аплицирај</a>
+                            <a onclick="loadActiveForm(1045)">Аплицирај</a>
 
                         </div>
                     </div>
@@ -330,7 +236,7 @@
                                 <h3>Напредна SHRM Акредитирана програма</h3>
                             </div>
 
-                            <div class="d-flex flex-column flex-md-row gap-2 align-items-center">
+                            <div class="d-flex gap-2 justify-content-center justify-content-md-start align-items-center">
                                 <p class="not-crossed">€1,625</p>
                                 <p class="crossed">€3,250</p>
                             </div>
@@ -351,7 +257,7 @@
                                 </ul>
                             </div>
 
-                            <a data-bs-toggle="modal" data-bs-target="#academiesModal">Аплицирај</a>
+                            <a onclick="loadActiveForm(1045)">Аплицирај</a>
 
                         </div>
                     </div>
@@ -367,7 +273,7 @@
                                 <h3>Премиум SHRM Акредитирана програма</h3>
                             </div>
 
-                            <div class="d-flex flex-column flex-md-row gap-2 align-items-center">
+                            <div class="d-flex gap-2 justify-content-center justify-content-md-start align-items-center">
                                 <p class="not-crossed">€3,500</p>
                                 <p class="crossed">€4,500</p>
                             </div>
@@ -399,7 +305,7 @@
                                 </ul>
                             </div>                      
 
-                            <a data-bs-toggle="modal" data-bs-target="#academiesModal">Аплицирај</a>
+                            <a onclick="loadActiveForm(1045)">Аплицирај</a>
                         </div>
                     </div>
                 </div>
@@ -623,6 +529,94 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- REGISTER FORM -->
+        <section id="registerForm">
+            <div class="container">
+                <form method="POST" action="https://akoskarova.activehosted.com/proc.php" id="_form_1017_" class="_form _form_1017 _inline-form  _dark" novalidate data-styles-version="5">
+                        <input type="hidden" name="u" value="1017" />
+                        <input type="hidden" name="f" value="1017" />
+                        <input type="hidden" name="s" />
+                        <input type="hidden" name="c" value="0" />
+                        <input type="hidden" name="m" value="0" />
+                        <input type="hidden" name="act" value="sub" />
+                        <input type="hidden" name="v" value="2" />
+                        <input type="hidden" name="or" value="944d871c-2590-4bc9-860b-cabeada010a2" />
+                        <div class="_form-content">
+                            <div class="_form_element _x06446460 _full_width _clear" >
+                            <h2 class="_form-title">
+                                Половина цена, за целосно нова кариера во 2026!
+                            </h2>
+                            </div>
+                            <div class="_form_element _x50857582 _full_width _clear" >
+                            <div class="_html-code">
+                                <p>
+                                Започни кариера во човечки ресурси со -50% попуст во 2026 година.
+                                </p>
+                                <p>
+                                💥 50 слободни места и само до 30 ноември!
+                                </p>
+                            </div>
+                            </div>
+                            <div class="_form_element _x47431121 _full_width " >
+                            <label for="fullname" class="_form-label">
+                                Име и презиме<span class="field-required">
+                                *
+                            </span>
+                            </label>
+                            <div class="_field-wrapper">
+                            <input type="text" id="fullname" name="fullname" placeholder="пр. Иван Ивановски" required/>
+                            </div>
+                        </div>
+                        <div class="_form_element _x46310163 _full_width " >
+                            <label for="email" class="_form-label">
+                            Е-пошта<span class="field-required">
+                            *
+                            </span>
+                        </label>
+                        <div class="_field-wrapper">
+                            <input type="text" id="email" name="email" placeholder="пр. ivan@gmail.com" required/>
+                        </div>
+                        </div>
+                        <div class="_form_element _x97418590 _full_width " >
+                        <label for="phone" class="_form-label">
+                            Телефонски број<span class="field-required">
+                            *
+                        </span>
+                        </label>
+                        <div class="_field-wrapper">
+                        <input type="text" id="phone" name="phone" placeholder="пр. 071 234 567" required/>
+                        </div>
+                        </div>
+                        <div class="_form_element _x10611095 _full_width " >
+                        <label for="g-recaptcha-response" class="_form-label">
+                        Верифицирај дека не си робот<span class="field-required">
+                        *
+                        </span>
+                        </label>
+                        <div class="g-recaptcha" data-sitekey="6LcwIw8TAAAAACP1ysM08EhCgzd6q5JAOUR1a0Go">
+                        </div>
+                        </div>
+                        <div class="_form_element _x12959948 _full_width _clear" >
+                        <div class="_html-code">
+                        <p>
+                        *Оваа понуда е за пролетни уписи!
+                        </p>
+                        </div>
+                        </div>
+                        <div class="_button-wrapper _full_width">
+                        <button id="_form_1017_submit" class="_submit" type="submit">
+                        Аплицирај
+                        </button>
+                        </div>
+                        <div class="_clear-element">
+                        </div>
+                        </div>
+                        <div class="_form-thank-you" style="display:none;">
+                        </div>
+                </form>
             </div>
         </section>
     </main>
